--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 	"scripts": {
 		"lint": "tslint src/index.ts && npm run stylelint",
 		"stylelint": "stylelint --syntax scss ./src/**/*.scss",
-		"pre-commit": "lint-staged",
 		"build": "tsc && node-sass src --output dist && cp src/index.html dist",
 		"test": "jest --ci src/*.spec.ts --coverage",
 		"build:legacy": "tsc --project tsconfig.legacy.json && node-sass src --output dist-legacy && cp src/index.html dist-legacy"
@@ -17,6 +16,11 @@
 	},
 	"bugs": {
 		"url": "https://github.com/wgrabowski/from-install-to-ci/issues"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
 	},
 	"homepage": "https://github.com/wgrabowski/from-install-to-ci#readme",
 	"devDependencies": {
